--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
 								<span class="image main"><img src="images/circle-cropped---about.png" alt="" /></span>
                                 <p>Hey there...<br>
 								   My name is  <b>Vanka Hari Janardhan</b> currently working as a Software Engineer in Innova Solutions of ACS Group(American CyberSystems Inc.). As an employee started exploring the Data Engineer Path by using various software products/tools like Python, Sql, Javascript, Node.js, AWS CLI, Scala, Git to develop products.
-                                   <br><br>I pursed my B.tech in Computer Science and Enginnering in MRCET JNTUH. While at the time of pursuing, as an aspiring student wants to learn concepts like big data, cloud computing and want to explore new technology in the market. 
-								   I enjoy learning new advancements in the technology, in that way i have explored myself into Data Science and Machine Learning Algorithms and implemented AI concepts in my projects.
+                                   <br><br>I pursued my Bachelor's in Computer Science and Engineering in MRCET JNTUH. While at the time of pursuing, as an aspiring student wanted to learn concepts like big data, cloud computing and wanted to explore new technology in the market. 
+								   I enjoy learning new advancements in technology, in that way i have explored myself into Data Science and Machine Learning Algorithms and implemented AI concepts in my projects.
 								   <a href="#DS"  style="color: rgb(112, 229, 253)" target="_"> Data Science and ML Alogorithms</a>
-                                   <br><br>I have attended to workshops and interships in various colleges as well as corporates in the industry. In that way i have learnt many things from various sources. 
+                                   <br><br>I have attended Workshops and Internships in various colleges as well as corporates in the industry. In that way i have learnt many things from various sources. 
                                        As now i started implementing projects using kaggle data. Skills acquired are...
                                    <br> Operating System - Windows, Linux.<br>Database/Server - Mysql, SQL Server, MangoDB, [SOSL,SOQL] in Salesforce<br>Programming Languages - Python, java, scala, Apex
                                    <br>Web Technologies - Html, CSS, Javascript, PHP<br>Other Software Tools - Tableau, Salesforce, Machine Learning Modules, AWS Client Services, Vs Code, Node.js, Apache Spark, Sbt, Postman, Intellij
@@ -198,7 +198,7 @@
 											           <i class="fab fa-salesforce"></i> - <a href="https://trailblazer.me/id/vhj9" style="color: rgb(112, 229, 253)" target="_" >   https://trailblazer.me/id/vhj9</a>
 
                                 </ul>
-								<p> •   Completed various tasks and build various app like data model for Recruitment App, Suggestion Box App, Travel Approval App.
+								<p> •   Completed various tasks and build various apps like data model for Recruitment App, Suggestion Box App, Travel Approval App.
 								<br>•   Implemented various other works like Airport Management</p>
 							
 							
