--- a/index.html
+++ b/index.html
@@ -53,17 +53,19 @@
 								
 								<span class="image main"><img src="images/circle-cropped---about.png" alt="" /></span>
                                 <p>Hey there...<br>
-								   My name is  <b>Vanka Hari Janardhan</b> currently working as a Software Engineer in Innova Solutions of ACS Group(American CyberSystems Inc.). As an employee started exploring the Data Engineer Path by using various software products/tools like Python, Sql, Javascript, Node.js, AWS CLI, Scala, Git to develop products.
-                                   <br><br>I pursued my Bachelor's in Computer Science and Engineering in MRCET JNTUH. While at the time of pursuing, as an aspiring student wanted to learn concepts like big data, cloud computing and wanted to explore new technology in the market. 
-								   I enjoy learning new advancements in technology, in that way i have explored myself into Data Science and Machine Learning Algorithms and implemented AI concepts in my projects.
-								   <a href="#DS"  style="color: rgb(112, 229, 253)" target="_"> Data Science and ML Alogorithms</a>
-                                   <br><br>I have attended Workshops and Internships in various colleges as well as corporates in the industry. In that way i have learnt many things from various sources. 
-                                       As now i started implementing projects using kaggle data. Skills acquired are...
-                                   <br> Operating System - Windows, Linux.<br>Database/Server - Mysql, SQL Server, MangoDB, [SOSL,SOQL] in Salesforce<br>Programming Languages - Python, java, scala, Apex
-                                   <br>Web Technologies - Html, CSS, Javascript, PHP<br>Other Software Tools - Tableau, Salesforce, Machine Learning Modules, AWS Client Services, Vs Code, Node.js, Apache Spark, Sbt, Postman, Intellij
-								   <br><br> 
-                                      With hard work and grit built valuable skills and solved problems. Whether it's finding the most elegant way to write a line of code or figuring out which chord fits best into the progression and discovering solutions.
-                                    <ul class="icons">
+			         My name is <b>Vanka Hari Janardhan</b>, currently working as a Software Engineer for Innova Solutions of ACS Group(American CyberSystems Inc.). As an employee, I started exploring the Data Engineer Path by using various software products/tools such as  Python, Sql, Javascript, Node.js, AWS CLI, Scala, Git to develop products.
+                                <br><br>I pursued my Bachelors of Technology in Computer Science and Engineering at MRCET, JNTUH. While pursuing, me being an aspiring student wanted to learn concepts like big data, cloud computing and explore new technologies in the IT market. I enjoy learning new advancements in technologies, have explored into Data Science and Machine Learning Algorithms and implemented AI concepts in my projects. 
+				<a href="#DS"  style="color: rgb(112, 229, 253)" target="_"> Data Science and ML Alogorithms</a>
+				<br><br>I have attended multiple workshops and interships in various colleges as well as corporates in the industry. I have acquired skills from various sources. For example, I started implementing projects using kaggle data. Skills acquired are...
+				<br>Operating System - Windows, Linux.
+				<br>Database/Server - Mysql, SQL Server, MangoDB, [SOSL,SOQL] in Salesforce
+				<br>Programming Languages - Python, java, scala, Apex
+				<br>Web Technologies - Html, CSS, Javascript, PHP
+				<br>Other Software Tools - Tableau, Salesforce, Machine Learning Modules, AWS Client Services, Vs Code, Node.js, Apache Spark, Sbt, Postman, Intellij
+				<br><br>With hard work and grit, I gained valuable skills and solved problems. Whether it's finding the most elegant way to write a line of code or figuring out which chord fits best into the progression and discovering solutions.		
+		                        <br>
+						
+				                         <ul class="icons">
 									<li><a href="https://twitter.com/V_H_J" class="icon brands fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
 									<li><a href="https://www.facebook.com/hari.rulz.7/" class="icon brands fa-facebook-f" target="_blank"><span class="label">Facebook</span></a></li>
 									<li><a href="https://www.instagram.com/vhj._.sii0es/" class="icon brands fa-instagram" target="_blank"><span class="label" target="_blank">Instagram</span></a></li>
