--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html>
 	<head>
 		<title>V-H-J</title>
-		<link rel="shortcut icon" href="C:\Users\VHJ\Downloads\Video\html5up-dimension\images\vhj_shortcut_icon.ico">
+		<link rel="shortcut icon" href="\images\vhj_shortcut_icon.ico">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
