--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
 				<a href="#DS"  style="color: rgb(112, 229, 253)" target="_"> Data Science and ML Alogorithms</a>
 				<br><br>I have attended multiple workshops and interships in various colleges as well as corporates in the industry. I have acquired skills from various sources. For example, I started implementing projects using kaggle data. Skills acquired are...
 				<br>Operating System - Windows, Linux.
-				<br>Database/Server - Mysql, SQL Server, MangoDB, [SOSL,SOQL] in Salesforce
-				<br>Programming Languages - Python, java, scala, Apex
-				<br>Web Technologies - Html, CSS, Javascript, PHP
-				<br>Other Software Tools - Tableau, Salesforce, Machine Learning Modules, AWS Client Services, Vs Code, Node.js, Apache Spark, Sbt, Postman, Intellij
+				<br>Database/Server - Mysql, SQL Server, MangoDB, [SOSL,SOQL] in Salesforce.
+				<br>Programming Languages - Python, java, scala, Apex.
+				<br>Web Technologies - Html, CSS, Javascript, PHP.
+				<br>Other Software Tools - Tableau, Salesforce, Machine Learning Modules, AWS Services, Vs Code, Node.js, Apache Spark, Sbt, Postman, git, anaconda, Intellij.
 				<br><br>With hard work and grit, I gained valuable skills and solved problems. Whether it's finding the most elegant way to write a line of code or figuring out which chord fits best into the progression and discovering solutions.		
 		                        <br>
 						
@@ -213,7 +213,7 @@
 						<!-- Contact -->
 							<article id="Contact">
 								<h2 class="major">Contact</h2>
-								<form method="post" action="https://formspree.io/f/mgerapjb" target="_blank">
+								<form method="post" action="https://formspree.io/f/mpzkrorj" target="_blank">
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Name</label>
