--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>V-H-J</title>
+		<title>Vanka-Hari-Janardhan</title>
 		<link rel="shortcut icon" href="\images\vhj_shortcut_icon.ico">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
