--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 								
 								<span class="image main"><img src="images/circle-cropped---about.png" alt="" /></span>
                                 <p>Hey there...<br>
-			         My name is <b>Vanka Hari Janardhan</b>, currently working as a Software Engineer for Innova Solutions of ACS Group(American CyberSystems Inc.). As an employee, I started exploring the Data Engineer Path by using various software products/tools such as  Python, Sql, Javascript, Node.js, AWS CLI, Scala, Git to develop products.
+			         My name is <b>Vanka Hari Janardhan</b>, currently working as a Software Engineer for Innova Solutions. As an employee, I started exploring the Data Engineer Path by using various software products/tools such as  Python, Sql, Javascript, Node.js, AWS CLI, Scala, Git to develop products.
                                 <br><br>I pursued my Bachelors of Technology in Computer Science and Engineering at MRCET, JNTUH. While pursuing, me being an aspiring student wanted to learn concepts like big data, cloud computing and explore new technologies in the IT market. I enjoy learning new advancements in technologies, have explored into Data Science and Machine Learning Algorithms and implemented AI concepts in my projects. 
 				<a href="#DS"  style="color: rgb(112, 229, 253)" target="_"> Data Science and ML Alogorithms</a>
 				<br><br>I have attended multiple workshops and interships in various colleges as well as corporates in the industry. I have acquired skills from various sources. For example, I started implementing projects using kaggle data. Skills acquired are...
