--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 								
 								<span class="image main"><img src="images/circle-cropped---about.png" alt="" /></span>
                                 <p>Hey there...<br>
-			         My name is <b>Vanka Hari Janardhan</b>, currently working as a Software Engineer for Innova Solutions. As an employee, I started exploring the Data Engineer Path by using various software products/tools such as  Python, Sql, Javascript, Node.js, AWS CLI, Scala, Git to develop products.
+			         My name is <b>Vanka Hari Janardhan</b>, currently working as a Software Engineer for Innova Solutions. As an employee, I started exploring the Data Engineer Path by using various software products/tools such as  Python, Sql, Javascript, Node.js, AWS CLI, Scala, Git to develop products and show Insights.
                                 <br><br>I pursued my Bachelors of Technology in Computer Science and Engineering at Malla Reddy College Of Engineering And Technology, JNTUH. While pursuing, me being an aspiring student wanted to learn concepts like big data, cloud computing and explore new technologies in the IT market. I enjoy learning new advancements in technologies, have explored into Data Science and Machine Learning Algorithms and implemented AI concepts in my projects. 
 				<a href="#DS"  style="color: rgb(112, 229, 253)" target="_"> Data Science and ML Alogorithms</a>
 				<br><br>I have attended multiple workshops and interships in various colleges as well as corporates in the industry. I have acquired skills from various sources. For example, I started implementing projects using kaggle data. Skills acquired are...
@@ -148,8 +148,8 @@
 								<br>•   In some industries it is necessary for the workers to wear safety helmets and shoes while working. So to check weather workers are taking safety precautions or not we are proposing this system.
                                 <br>•   We can train our classifier to identify helmet and safety shoes with IBM Cloud and Clarifai Visual Recognition Engine(AI). There will be video streaming near the entry of the industries where we can first detect the face of a person and if any person is present then we can capture the image of that moment and send it to IBM Cloud to detect whether the person is wearing helmet or shoe.
 							    <br>•   If the person is wearing shoe and helmet we can give him access by opening the door. If he is not wearing then we can restrict his access by not opening the door. We can even warn him through voice commands to take the safety precautions.
-								<br><br> ---> You can click on below links to check <b>Project Code and Documentation</b> ---<br>
-					<!--			<i class="fab fa-github"></i><a href="https://github.com/V-H-J/-Intelligent-Access-Control-System-For-Safety-Critical-Areas-In-Industries-" target="_blank" style="color: rgb(112, 229, 253)"> https://github.com/V-H-J/-Intelligent-Access-Control-System-For-Safety-Critical-Areas-In-Industries-</a> 
+								<br><br>  You can click on below links to check <b>Project Code and Documentation</b> ---<br>
+				  			<i class="fab fa-github"></i><a href="https://github.com/V-H-J/-Intelligent-Access-Control-System-For-Safety-Critical-Areas-In-Industries-" target="_blank" style="color: rgb(112, 229, 253)"> https://github.com/V-H-J/-Intelligent-Access-Control-System-For-Safety-Critical-Areas-In-Industries-</a> 
 								</p>             -->
 							</article>
 
