--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
 								<br>Still working on it for better accuracy...
                                 <p> 1.	Problem Definition In a statement –
                                 <br>•	Given clinical parameters about a patient, can we predict whether or not they have heart disease?
-                                <br>2.	Data The original data came from the 
-                                <br>•	Cleveland data from the UCI Machine Learning Repository...
+                     <!--           <br>2.	Data The original data came from the -->
+                                <br>•	Dataset from the UCI Machine Learning Repository...
 		<!--						<br>URL -<a href = "https://archive.ics.uci.edu/ml/datasets/heart+Disease" style="color: rgb(112, 229, 253)" target="_"> https://archive.ics.uci.edu/ml/datasets/heart+Disease</a>       ---->
                                 <br>•	This Dataset is available on <b>Kaggle</b>.
                                 <br><i class="fab fa-kaggle"></i> - URL -<a href = "https://www.kaggle.com/ronitf/heart-disease-uci" style="color: rgb(112, 229, 253)" target="_"> https://www.kaggle.com/ronitf/heart-disease-uci</a>
