--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 								<li><a href="#About">About</a></li>
 								<li><a href="#DS">DataScience- ML,AI</a></li>
 								<li><a href="#certification">certifications</a></li>
-					<!--			<li><a href="#Salesforce">Salesforce</a></li>		-->						
+							<li><a href="#Salesforce">Salesforce</a></li>							
 								<li><a href="#Contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
