--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
 							<div class="inner">
 								<h1> Vanka Hari Janardhan</h1>
 								<p>Heyo! nice to meet you  <i class="far fa-grin-wink fa-2x"></i><br> Please be free to check out my profile</p>
-							<!--	<p>A fully responsive site template designed by <a href="https://html5up.net">HTML5 UP</a> and released<br />
-								for free under the <a href="https://html5up.net/license">Creative Commons</a> license.</p>--->
+			
 							</div>
 						</div>
 						<nav>
@@ -53,8 +52,8 @@
 								
 								<span class="image main"><img src="images/circle-cropped---about.png" alt="" /></span>
                                 <p>Hey there...<br>
-			         My name is <b>Vanka Hari Janardhan</b>, worked as a Software Engineer for Innova Solutions. As an employee, I started exploring the Data Engineer Path by using various software products/tools such as  Python, Sql, Javascript, Node.js, AWS CLI, Scala, Git to develop products and show Insights.
-                                <br><br>I currently pursuing my Masters in Data Science at University of Alabama at Birmingham. While pursuing, me being an aspiring student always wants to stacked up with Data Mining, Machine Learning, advance web development, advance algorithms, big data, cloud computing concepts and explore new technologies in the IT market. I enjoy learning new advancements in technologies, have explored into Data Science and Machine Learning Algorithms and implemented AI concepts in my projects. 
+			         My name is <b>Vanka Hari Janardhan</b>, worked as a Software Engineer for Innova Solutions (American Cyber Systems) solutions group. As an employee, I started exploring the Data Engineer Path by using various software products/tools such as  Python, Sql, Javascript, Node.js, AWS CLI, Scala, Git to develop products and show Insights.
+                                <br><br>I currently pursuing my <a href="#DS"  style="color: rgb(112, 229, 253)" target="_"> Masters in Data Science at University of Alabama at Birmingham</a>. While pursuing, me being an aspiring student always wants to stacked up with Data Mining, Machine Learning, advance web development, advance algorithms, big data, cloud computing concepts and explore new technologies in the IT market. I enjoy learning new advancements in technologies, have explored into Data Science and Machine Learning Algorithms and implemented AI concepts in my projects. 
 				<a href="#DS"  style="color: rgb(112, 229, 253)" target="_"> Data Science and ML Alogorithms</a>
 				<br><br>I have attended multiple workshops and interships in various colleges as well as corporates in the industry. I have acquired skills from various sources. For example, I started implementing projects using kaggle data. Skills acquired are...
 				<br>Operating System - Windows, Linux.
@@ -79,7 +78,7 @@
 
 						<!-- Ds -->
 							<article id="DS">
-								<h2 class="major">DS ML AI</h2>
+								<h2 class="major">DS ML AI Full Stack</h2>
 								<!-- <span class="image main"><img src="images/pic02.jpg" alt="" /></span> -->
 								<h4>Latest Implementations</h4>
 							    <big><b>Heart Disease Classification</b></big>
