--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@
 								<h2 class="major">DS ML AI Full Stack</h2>
 								<!-- <span class="image main"><img src="images/pic02.jpg" alt="" /></span> -->
 								<h4>Latest Implementations</h4>
+							     <big><b>Full Stack App - Foodie </b></bSg>
+								
 							    <big><b>Heart Disease Classification</b></big>
 								<br>Still working on it for better accuracy...
                                 <p> 1.	Problem Definition In a statement –
