--- a/index.html
+++ b/index.html
@@ -82,6 +82,12 @@
 								<!-- <span class="image main"><img src="images/pic02.jpg" alt="" /></span> -->
 								<h4>Latest Implementations</h4>
 							     <big><b>Full Stack App - Foodie </b></big>
+				<p> Developed Web Application Called Foodie where users can order food online. Included features like from ordering food, sign in/up, rate/review, payment methods, order history, favorite food.
+				<br>Technologies used –
+				<br>Backend : Python-Django
+	       			<br>Database : PostgreSQL 
+				<br>Frontend : Html, CSS, Bootstrap, jQuery, JavaScript.
+				</p>				
 								
 							    <big><b>Heart Disease Classification</b></big>
 								<br>Still working on it for better accuracy...
