--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Vanka-Hari-Janardhan</title>
+		<title>Hari-Janardhan-Vanka</title>
 		<link rel="shortcut icon" href="\images\vhj_shortcut_icon.ico">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -25,7 +25,7 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1> Vanka Hari Janardhan</h1>
+								<h1> Hari Janardhan Vanka</h1>
 								<p>Heyo! nice to meet you  <i class="far fa-grin-wink fa-2x"></i><br> Please be free to check out my profile</p>
 			
 							</div>
@@ -33,7 +33,7 @@
 						<nav>
 							<ul>
 								<li><a href="#About">About</a></li>
-								<li><a href="#DS">DataScience- ML,AI</a></li>
+								<li><a href="#DS">DataScience - ML,AI</a></li>
 								<li><a href="#certification">certifications</a></li>
 							<li><a href="#Salesforce">Salesforce</a></li>							
 								<li><a href="#Contact">Contact</a></li>
