--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 						<nav>
 							<ul>
 								<li><a href="#About">About</a></li>
-								<li><a href="#DS">DataScience - ML,AI</a></li>
+								<li><a href="#DS">DataScience / Full Stack</a></li>
 								<li><a href="#certification">certifications</a></li>
 							<li><a href="#Salesforce">Salesforce</a></li>							
 								<li><a href="#Contact">Contact</a></li>
