--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 				                         <ul class="icons">
 									<li><a href="https://twitter.com/V_H_J" class="icon brands fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
 									<li><a href="https://www.facebook.com/hari.rulz.7/" class="icon brands fa-facebook-f" target="_blank"><span class="label">Facebook</span></a></li>
-									<li><a href="https://www.instagram.com/vhj._.sii0es/" class="icon brands fa-instagram" target="_blank"><span class="label" target="_blank">Instagram</span></a></li>
+									<li><a href="https://www.instagram.com/hj.vanka/" class="icon brands fa-instagram" target="_blank"><span class="label" target="_blank">Instagram</span></a></li>
 									<li><a href="https://github.com/V-H-J" target="_blank" class="icon brands fa-github" target="_blank"><span class="label">GitHub</span></a></li>
 									<li><a href="https://www.linkedin.com/in/vanka-hari-janardhan-57819a182/" class="fab fa-linkedin" target="_blank"><span class=""></span></a></li>
 									<li><a href="https://trailblazer.me/id/vhj9" class="fab fa-salesforce" target="_blank"><span class=""></span></a></li>
@@ -247,7 +247,7 @@
 								<ul class="icons">
 									<li><a href="https://twitter.com/V_H_J" class="icon brands fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
 									<li><a href="https://www.facebook.com/hari.rulz.7/" class="icon brands fa-facebook-f" target="_blank"><span class="label">Facebook</span></a></li>
-									<li><a href="https://www.instagram.com/vhj._.sii0es/" class="icon brands fa-instagram" target="_blank"><span class="label" target="_blank">Instagram</span></a></li>
+									<li><a href="https://www.instagram.com/hj.vanka/" class="icon brands fa-instagram" target="_blank"><span class="label" target="_blank">Instagram</span></a></li>
 									<li><a href="https://github.com/V-H-J" target="_blank" class="icon brands fa-github" target="_blank"><span class="label">GitHub</span></a></li>
 									<li><a href="https://www.linkedin.com/in/vanka-hari-janardhan-57819a182/" class="fab fa-linkedin" target="_blank"><span class=""></span></a></li>
 									<li><a href="https://trailblazer.me/id/vhj9" class="fab fa-salesforce" target="_blank"><span class=""></span></a></li>
