--- a/index.html
+++ b/index.html
@@ -182,8 +182,8 @@
 						--> In Verify using credentials in Certificate section 
                                                 <br></p>	
 								
-						<p><u>IBM - Cognitive.AI Certifications</u>
-						<br> Data Analysis for Python -> <i class="fas fa-certificate"></i> - <a href="https://www.credly.com/badges/3c4b006e-7ef2-4ebd-a1d5-2ac269468fb1" style="color: rgb(112, 229, 253)" target="_" > Click On --> Data Analysis Using Python</a>
+						<p><u><b>IBM - Cognitive.AI Certifications</b></u>
+						<br> <i class="fas fa-certificate"></i> Data Analysis for Python >-< <a href="https://www.credly.com/badges/3c4b006e-7ef2-4ebd-a1d5-2ac269468fb1" style="color: rgb(112, 229, 253)" target="_" > Click On --> Data Analysis Using Python</a>
 
 						<br> Spark Fundamentals 1, 
 						<br> Hadoop fundamentals 101,
