--- a/index.html
+++ b/index.html
@@ -83,7 +83,12 @@
 				
 				<h4>Latest Implementations</h4>
 
-				<big><b>Stock market kafka live streaming</b></big>
+				<big><b>Stock Market Kafka Live Streaming Pipeline</b></big>
+				<p>Implemented a streaming pipeline using Apache Kafka to stream the whole data into the Aws bucket in real time scenario and then used AWS Glue, Crawler and Athena to query and manipulate the data.
+				<br>Dataset -> Stock Market app simulation -> Producer -> Kafka -> Customer -> S3 -> Crawler -> Glue -> Athena.
+				<br>
+				</i><br><i class="fab fa-github"></i><a href="https://github.com/V-H-J/Stock_Market_Analysis_using_Kafka.git" target="_blank" style="color: rgb(112, 229, 253)"> ---> GITHUB LINK <--- </a>
+				</p>
 
 								
 				<br><big><b>youtube data analysis</b></big>
