--- a/index.html
+++ b/index.html
@@ -132,13 +132,13 @@
 				<br><i class="fab fa-github"></i><a href="https://github.com/V-H-J/youtube_data_analysis.git" target="_blank" style="color: rgb(112, 229, 253)"> ---> GitHub Link <--- </a>			
 				</p>
 		
-				<big><b>credit risk analysis </b></big>
+				<big><b>Credit Risk Analysis</b></big>
 				<p>Implemented with risk dataset, where to analyse whether person’s loan can be approved or rejected classifying using Random Forest Classifier and Lightgbm classifier.
 				<br>
 				<br><i class="fab fa-github"></i><a href="https://github.com/V-H-J/credit_risk_dataset.git" target="_blank" style="color: rgb(112, 229, 253)"> ---> GitHub Link <--- </a>			
 				</p>
 
-				<big><b>twitter data airflow </b></big>
+				<big><b>DE on Twitter Data Using Airflow</b></big>
 				<p>Using Twitter Api tweepy data with python and deploy in Airflow on building workflows and ingested data through ec2 into s3.
 				<br>Twitter API -> Python -> Apache AirFlow -> Ec2 -> AWS S3.	
 				<br><i class="fab fa-github"></i><a href="https://github.com/V-H-J/twitter_data_pipeline_using_airflow.git" target="_blank" style="color: rgb(112, 229, 253)"> ---> GitHub Link <--- </a>
@@ -268,7 +268,7 @@
 								<br> <big><b>2. SALES Insights -</b></big> -->
 						
 						<p><i class="fas fa-certificate"></i><b>ML Model Monitoring Certification</b>
-						<span class="image main"><a href="https://www.linkedin.com/in/hari-janardhan-vanka-57819a182/" target="_blank"><img src="images/ml-observability-fundamentals-certification.PNG" width="50" height="250" alt="" /></a></span>
+<!-- 						<span class="image main"><a href="https://www.linkedin.com/in/hari-janardhan-vanka-57819a182/" target="_blank"><img src="images/ml-observability-fundamentals-certification.PNG" width="50" height="250" alt="" /></a></span> -->
 						<br> by Arize.AI (Arize University)
 						<br><a href="https://www.linkedin.com/in/hari-janardhan-vanka-57819a182/" style="color: rgb(112, 229, 253)" target="_" > verify > LinkedIn </a>
 						--> In Verify using credentials in Certificate section 
