--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 							<div class="inner">
 								<h1> Hari Janardhan Vanka</h1>
 								<p>Heyo! nice to meet you  <i class="far fa-grin-wink fa-2x"></i><br> Please be free to check out my profile</p>
+								<a href="/images/Hari_Janardhan_Vanka_Resume.pdf" download>
+  								<img src="/images/download.png" alt="Schools" width="70" height="80">
+								</a>
 			
 							</div>
 						</div>
