--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 								<h1> Hari Janardhan Vanka</h1>
 								<p>Heyo! nice to meet you  <i class="far fa-grin-wink fa-2x"></i><br> Please be free to check out my profile</p>
 								<a href="/images/Hari_Janardhan_Vanka_Resume.pdf" download>
-  								<img src="/images/download.png" alt="Schools" width="70" height="80">
+  								<img src="/images/resume.PNG" alt="Schools" width="100" height="100">Click on the Image to download the resume.
 								</a>
 			
 							</div>
