--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 							<div class="inner">
 								<h1> Hari Janardhan Vanka</h1>
 								<p>Heyo! nice to meet you  <i class="far fa-grin-wink fa-2x"></i><br> Please be free to check out my profile</p>
-								<a href="/images/Hari_Janardhan_Vanka_Resume.pdf" download>
+								<a href="/images/Hari_Janardhan_Vanka_Resume.pdf" target="_blank">
   								<img src="/images/resume.PNG" alt="Schools" width="100" height="100">
 								</a> <p> Click on the Image Doc to download the <b>Resume</b>.</p>
 			
