--- a/index.html
+++ b/index.html
@@ -25,10 +25,11 @@
 								<p>Heyo! nice to meet you  <i class="far fa-grin-wink fa-2x"></i><br> Please be free to check out my profile</p>
 <!-- 								<a href="/images/Hari_Janardhan_Vanka_Resume.pdf" target="_blank"> -->
 								<a href="https://drive.google.com/file/d/1dF0qmyacM8vnS1u3lSPI4ZXpRp6zU08x/view?usp=share_link" target="_blank">
-  								<img src="/images/resume.PNG" alt="Schools" width="100" height="100">Download!!
-								</a> 
+  								<img src="/images/resume.PNG" alt="Schools" width="100" height="100"><br>
 								<input type="button" value="Download!!">
-								<button>Download!!</button>
+								</a> 
+								
+<!-- 								<button>Download!!</button> -->
 								<p> Click on the Image Doc to View and download the <b>Resume</b>.</p>
 			
 							</div>
