--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <!-- 								<a href="/images/Hari_Janardhan_Vanka_Resume.pdf" target="_blank"> -->
 								<a href="https://drive.google.com/file/d/1dF0qmyacM8vnS1u3lSPI4ZXpRp6zU08x/view?usp=share_link" target="_blank">
   								<img src="/images/resume.PNG" alt="Schools" width="100" height="100"><br>
-								<input type="button" value="Download!!">
+<!-- 								<input type="button" value="Download!!"> -->
 								</a> 
 								
 <!-- 								<button>Download!!</button> -->
