--- a/index.html
+++ b/index.html
@@ -75,18 +75,20 @@
 				<br>Innova Solutions -&nbsp;&nbsp;   Software Enginner              &nbsp;&nbsp; from Mar, 2021
 				<br>SmartBridge(Intern) -&nbsp; Software Engineer              &nbsp;&nbsp; from May, 2019
  				
+				<br><big><b>Education</b></big>
 				<br><br>Currently pursuing my <big style="color: rgb(112, 229, 253)"> Masters in Computer Science - Data Science at University of Alabama at Birmingham</big>. While pursuing, me being an aspiring student always wants to stacked up with Data Mining, Machine Learning, advance web development, Big data, cloud computing, advance algorithms, Database Systems & App development, Network Security concepts and explored new technologies in the IT Hub. 
 				I enjoy learning new advancements in technologies and implemented <a href="#DS" target="_blank" style="color: rgb(112, 229, 253)">Live Streaming Projects</a>on various clouds, have explored into Data Science and Machine Learning Algorithms and implemented AI concepts in my projects. 
-				<a href="#DS"  style="color: rgb(112, 229, 253)" target="_blank"> Data Science and ML Alogorithms</a>
-				<br><br>I have attended multiple workshops and interships in various colleges as well as corporates in the industry. I have acquired skills from various sources. For example, I started implementing projects using kaggle data. Skills acquired are...
-				<br>
+				<br> I have done by Bachelors in Computer Science and Engineering at Jawaharlal Nehru Technological University Hyderabad (MRCET).
+				<br> Secondary Education at Hyderabad Public School.	
+<!-- 				<a href="#DS"  style="color: rgb(112, 229, 253)" target="_blank"> Data Science and ML Alogorithms</a> -->
+				<br><br>I have attended multiple workshops and interships in various colleges as well as corporates in the industry. I have acquired skills from various sources. For example, I started implementing projects using kaggle data.
 				<br><big><b>Skills</b></big>
 				<br><u>Programming Languages</u> - Python, Java
 				<br><u>Query Languages</u> - MySQL, SQL, SOQL, SOSL
 				<br><u>Databases</u> - MySQL, Mango DB, SQL server, PostgreSQL, MariaDB
-				<br><u>Big Data Technologies</u> - Apache Spark, Spark SQL, Hadoop, HDFS, SBT, Postman, MapRGit, Scala, AWS
-				<br><u>Cloud Technologies</u> - AWS - {S3, DynamoDB, RDS, EMR, Athena, Glue, Redshift}, AZURE – Data Lake, Data Bricks
-				<br><u>Visualisation Tools</u> – Tableau, Power BI.
+				<br><u>Big Data Technologies</u> - Apache Spark, Spark SQL, Apache Hive, Apache Kafka, Hadoop, HDFS, SBT, Postman, MapRGit, Scala, AWS, Airflow
+				<br><u>Cloud Technologies</u> - AWS - {S3, DynamoDB, RDS, EMR, Athena, Glue, Redshift}, AZURE – Data Lake, Data Bricks, Teradata 
+				<br><u>Visualisation Tools</u> – Tableau, Power BI, SAS, MicroStrategy
 				<br><u>Web Development Languages</u> - Html, CSS, JavaScript, Django, Flask
 				<br><u>SalesForce Cloud CRM</u> - Administrator, Developer
 				<br><u>Operating Systems</u> - Windows – [xp, 2007, 10, 11] and Linux
