--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
 				<br><u>Programming Languages</u> - Python, Java
 				<br><u>Query Languages</u> - MySQL, SQL, SOQL, SOSL
 				<br><u>Databases</u> - MySQL, Mango DB, SQL server, PostgreSQL, MariaDB
-				<br><u>Big Data Technologies</u> - Apache Spark, Spark SQL, Apache Hive, Apache Kafka, Hadoop, HDFS, SBT, Postman, MapRGit, Scala, AWS, Airflow, Splunk Api
+				<br><u>Big Data Technologies</u> - Apache Spark, Spark SQL, Apache Hive, Apache Kafka, Apache Kudo, Hadoop, HDFS, SBT, Postman, MapRGit, Scala, AWS, Airflow, Splunk Api
 				<br><u>Cloud Technologies</u> - AWS - {S3, DynamoDB, RDS, EMR, Athena, Glue, Redshift}, AZURE – DataLake, DataBricks, Teradata 
-				<br><u>Visualisation Tools</u> – Tableau, Power BI, SAS, MicroStrategy
+				<br><u>Visualisation Tools</u> – Tableau, Power BI, SAS BI, MicroStrategy
 				<br><u>Web Development Languages</u> - Html, CSS, JavaScript, Django, Flask
 				<br><u>SalesForce Cloud CRM</u> - Administrator, Developer
 				<br><u>Operating Systems</u> - Windows – [xp, 2007, 10, 11] and Linux
