--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
 								<h1> Hari Janardhan Vanka</h1>
 								<p>Heyo! nice to meet you  <i class="far fa-grin-wink fa-2x"></i><br> Please be free to check out my profile</p>
 <!-- 								<a href="/images/Hari_Janardhan_Vanka_Resume.pdf" target="_blank"> -->
-								<a href="https://drive.google.com/file/d/1dF0qmyacM8vnS1u3lSPI4ZXpRp6zU08x/view?usp=share_link" target="_blank">
+<!-- 								<a href="https://drive.google.com/file/d/1dF0qmyacM8vnS1u3lSPI4ZXpRp6zU08x/view?usp=share_link" target="_blank"> -->
+
+								<a href="https://drive.google.com/file/d/133qPVOxK7SLhKfm-oitF1fHV66_HHwYB/view?usp=sharing" target="_blank">	
   								<img src="/images/resume.PNG" alt="Schools" width="100" height="100"><br>
 <!-- 								<input type="button" value="Download!!"> -->
 								</a> 
