--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <!-- 								<a href="https://drive.google.com/file/d/1dF0qmyacM8vnS1u3lSPI4ZXpRp6zU08x/view?usp=share_link" target="_blank"> -->
 
 								<a href="https://drive.google.com/file/d/133qPVOxK7SLhKfm-oitF1fHV66_HHwYB/view?usp=sharing" target="_blank">	
-  								<img src="/images/resume.PNG" alt="Schools" width="100" height="100"><br>
+  								<img src="/images/Resume.jpg" alt="Schools" width="100" height="100"><br>
 <!-- 								<input type="button" value="Download!!"> -->
 								</a> 
 								
