--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
 				<br>SnowStack -&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Data Engineer  &nbsp;&nbsp; from Jan, 2023
 				<br>Student Assistant -&nbsp;   Capstone Project                &nbsp;&nbsp; from Aug, 2022
 				<br>Innova Solutions (ACS Solutions)-&nbsp;&nbsp;   Software Enginner              &nbsp;&nbsp; from Mar, 2021
-				<br>SmartBridge(Intern) -&nbsp; Software Engineer              &nbsp;&nbsp; from May, 2019
- 				
+				<br>Trailhead Systems -&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;   ETL Salesforce Developer       &nbsp;&nbsp; from Sept, 2020
+				<br>SmartBridge -&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; IOT Developer       &nbsp;&nbsp; from May, 2019
 				<br><big><b>Education</b></big>
 				<br><br>Currently pursuing my <big style="color: rgb(112, 229, 253)"> Masters in Computer Science - Data Science at University of Alabama at Birmingham</big>. While pursuing, me being an aspiring student always wants to stacked up with Data Mining, Machine Learning, advance web development, Big data, cloud computing, advance algorithms, Database Systems & App development, Network Security concepts and explored new technologies in the IT Hub. 
 				I enjoy learning new advancements in technologies and implemented <a href="#DS" target="_blank" style="color: rgb(112, 229, 253)">Live Streaming Projects</a>on various clouds, have explored into Data Science and Machine Learning Algorithms and implemented AI concepts in my projects. 
