--- a/index.html
+++ b/index.html
@@ -267,6 +267,15 @@
 							<article id="certification">
 								<h2 class="major">certifications</h2>
 						
+						<p><i class="fas fa-certificate"></i><b>Oracle 2023 Associate Certification</b>
+						<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b> - Cloud Data Management</b>
+						<br><a href="https://catalog-education.oracle.com/pls/certview/sharebadge?id=35F980A5C06510716D03F0D091379CCE20026B68253314659909FB0FF521CE31" style="color: rgb(112, 229, 253)" target="_" > verify > LinkedIn </a>
+						--> In Verify using credentials in Certificate section 
+                                                <br>
+						<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b> - Cloud Infrastructure</b>
+						<br><a href="https://catalog-education.oracle.com/pls/certview/sharebadge?id=D583022F13E6CE2632463A7C2C9222E707FB69DDC254FC71CAE998D4745A64DA" style="color: rgb(112, 229, 253)" target="_" > verify > LinkedIn </a>
+						--> In Verify using credentials in Certificate section 
+						<br></p>
 						
 						<p><i class="fas fa-certificate"></i><b>ML Model Monitoring Certification</b>
 						<br> by Arize.AI (Arize University)
