--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 								
 								<span class="image main"><img src="images/portfolio_pic_1.png" alt="" /></span>
                                 <p>Hey there...<br>
-			         My name is <b>Hari Janardhan Vanka</b>, worked as a Software Engineer for Innova Solutions ((American Cyber Systems) aka ACS Solutions). As an employee, 
+			         I'm <b>Hari Janardhan Vanka</b>, experienced Software Engineer worked for Innova Solutions ((American Cyber Systems) aka ACS Solutions). As an employee, 
 					Implemented Data Engineering Principles by working on Automating ETL process by building and maintianed real-time data processing Apache Kafka streaming pipelines on ingesting data from datalake/data sources. 
 					<br>> Optimization on by creating functions to process or load data from PySpark data frames into Hive or Impala tables.
 					<br>> Used to pre-process the data from ISA to HDFS file format, apply tranformation technique to create parquet for data cleansing and normalization and create jars upon it.  
