--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@
 					
 				<br><big><b>Work Experience</b></big>
 <!-- 				<br>SnowStack -&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Data Engineer  &nbsp;&nbsp; from Jan, 2023 -->
+				<br>Regions Bank -&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Data and Analytics Analyst &nbsp;&nbsp; from Oct 2023
+				<br>3S Business Corporation Inc -&nbsp;&nbsp;&nbsp; Data Engineer &nbsp;&nbsp; from Sept 2023	
 				<br>Student Assistant -&nbsp;  CS/CSA 499 Capstone Project Course               &nbsp;&nbsp; from Aug, 2022
 				<br>Innova Solutions (ACS Solutions)-&nbsp;&nbsp;   Software Enginner              &nbsp;&nbsp; from Mar, 2021
 				<br>Trailhead Systems -&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  Salesforce CRM Analytics Developer       &nbsp;&nbsp; from Sept, 2020
