--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 								
 								<span class="image main"><img src="images/portfolio_pic_1.png" alt="" /></span>
                                 <p>Hey there...<br>
-			         I'm <b>Hari Janardhan Vanka</b>, experienced Data Analytics Analyst/Consultant/Engineer/Specialist worked for Regions Bank. As an employee, 
+			         I'm <b>Hari Janardhan Vanka</b>, experienced Data Analytics Analyst/Consultant/Engineer/Specialist at Regions Bank. As an employee, 
 					Implemented Data Engineering Principles by working on Automating ETL process by building and maintianed real-time data processing Apache Kafka streaming pipelines on ingesting data from datalake/data sources. 
 					<br>> Optimization on by creating functions to process or load data from PySpark data frames into Hive or Impala tables.
 					<br>> Used to pre-process the data from ISA to HDFS file format, apply tranformation technique to create parquet for data cleansing and normalization and create jars upon it.  
@@ -76,7 +76,7 @@
 <!-- 				<br>SnowStack -&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Data Engineer  &nbsp;&nbsp; from Jan, 2023 -->
 				<br>Regions Bank -&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Data and Analytics Analyst &nbsp;&nbsp; from Oct 2023
 				<br>3S Business Corporation Inc -&nbsp;&nbsp;&nbsp; Data Engineer &nbsp;&nbsp; from Sept 2023	
-				<br>Student Assistant -&nbsp;  CS/CSA 499 Capstone Project Course               &nbsp;&nbsp; from Aug, 2022
+				<br>Graduate Student Assistant -&nbsp;  CS/CSA 499 Capstone Project Course               &nbsp;&nbsp; from Feb, 2022
 				<br>Innova Solutions (ACS Solutions)-&nbsp;&nbsp;   Software Enginner              &nbsp;&nbsp; from Mar, 2021
 				<br>Trailhead Systems -&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  Salesforce CRM Analytics Developer       &nbsp;&nbsp; from Sept, 2020
 				<br>TheSmartBridge -&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; IOT Engineer       &nbsp;&nbsp; from May, 2019
@@ -270,6 +270,16 @@
 							<article id="certification">
 								<h2 class="major">certifications</h2>
 
+						<p><i class="fas fa-certificate"></i> <b>AWS Certified : Data Engineer Associate : DAE C01 Certification</b>
+<!-- 						<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <b> - Generative AI Fundamentals</b> -->
+						<br><a href="https://www.credly.com/badges/b5c531e6-0fc8-4596-be79-2915bf769901/public_url" style="color: rgb(112, 229, 253)" target="_" > verify  >>>  Credly </a>
+						--> Click on to Verify through AWS Certified Data Engineer Associate Credentials System Portal / LinkindIn
+                                                <br></p>
+						<p><i class="fas fa-certificate"></i> <b>Microsoft Certified : AZURE Data Engineer Associate : DP-203 Certification</b>
+<!-- 						<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <b> - Generative AI Fundamentals</b> -->
+						<br><a href="https://learn.microsoft.com/api/credentials/share/en-us/VANKAHARIJANARDHAN-0541/4CD2D55381EF6ADB?sharingId=8976F2AEFBA970" style="color: rgb(112, 229, 253)" target="_" > verify  >>> Microsoft Portal </a>
+						--> Click on to Verify through Microsoft Certified Azure Data Engineer Associate Credentials System Portal / LinkindIn
+                                                <br></p>
 						<p><i class="fas fa-certificate"></i> <b>Databricks Certifications</b>
 						<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <b> - Generative AI Fundamentals</b>
 						<br><a href="https://credentials.databricks.com/82eb5bdf-0160-4861-9e4f-1c60d543672d#gs.50394t" style="color: rgb(112, 229, 253)" target="_" > verify  >>>  Databricks Credentials Portal </a>
