--- a/index.html
+++ b/index.html
@@ -94,13 +94,13 @@
 				<br><u>Programming Languages</u> - Python, Java
 				<br><u>Query Languages</u> - MySQL, SQL, SOQL, SOSL
 				<br><u>Databases</u> - MySQL, Mango DB, SQL server, PostgreSQL, MariaDB
-				<br><u>Big Data Technologies</u> - Apache Spark, Spark SQL, Apache Hive, Apache Kafka, Apache Kudu, Hadoop, HDFS, SBT, Postman, MapRGit, Scala, AWS, Airflow, Splunk Api
-				<br><u>Cloud Technologies</u> - AWS - {S3, DynamoDB, RDS, EMR, Athena, Glue, Redshift}, AZURE – DataLake, DataBricks, Teradata 
-				<br><u>Visualisation Tools</u> – Tableau, Power BI, SAS BI, MicroStrategy
+				<br><u>Big Data Technologies</u> - Apache Spark, Spark SQL, Apache Hive, Apache Impala, Apache Kafka, Apache Kudu, HDFS, SBT, Postman, MapRGit, Scala, BitBucket, GIT, GITLAB, Harness, JFrog, Airflow, Splunk Api, Alteryx.
+				<br><u>Cloud Technologies</u> - AWS - {S3, DynamoDB, RDS, EMR, Athena, Glue, Redshift}, AZURE, DataBricks, Snowflake, Cloudera, GCP. 
+				<br><u>Visualisation Tools</u> – Tableau, Power BI, SAS BI, MicroStrategy, Excel
 				<br><u>Web Development Languages</u> - Html, CSS, JavaScript, Django, Flask
 				<br><u>SalesForce Cloud CRM</u> - Administrator, Developer
 				<br><u>Operating Systems</u> - Windows – [xp, 2007, 10, 11] and Linux
-				<br><u>Methodology</u> - Agile
+				<br><u>Methodology</u> - Agile (Atlassian - Jira, Confluence, Kanban Board)
 				<br><u>IDE’S</u> - Sublime Text, PyCharm, IntelliJ, Node.js, Anaconda, VS code, Intellij.
 				<br><u>Computational Skills</u> - MS Office
 				
