--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <!-- 								<a href="/images/Hari_Janardhan_Vanka_Resume.pdf" target="_blank"> -->
 <!-- 								<a href="https://drive.google.com/file/d/1dF0qmyacM8vnS1u3lSPI4ZXpRp6zU08x/view?usp=share_link" target="_blank"> -->
 
-								<a href="https://drive.google.com/file/d/1libz5gzqGnuvD45bK8AAmCJnZJIhfPpB/view?usp=sharing" target="_blank">	
+<!-- 								<a href="https://drive.google.com/file/d/1libz5gzqGnuvD45bK8AAmCJnZJIhfPpB/view?usp=sharing" target="_blank">	 -->
 									
   								<img src="/images/Resume.jpg" alt="Schools" width="100" height="100"><br>
 <!-- 								<input type="button" value="Download!!"> -->
@@ -60,7 +60,7 @@
 								<span class="image main"><img src="images/portfolio_pic_1.png" alt="" /></span>
                                 <p>Hey there...<br>
 			         I'm <b>Hari Janardhan Vanka</b>, experienced Business Intelligence Data Analytics Analyst/Engineer/Consultant/Specialist at Regions Bank. As an employee, 
-					Implemented Data Engineering/Analytics Principles by working on Automating ETL process by building and maintianed real-time data processing streaming pipelines on ingesting data from datalake/data sources. 
+					Implemented Data Engineering/Analytics Principles by working on Automating ETL process by building/maintianing real-time data processing streaming pipelines on ingesting data from datalake/data sources. 
 					<br>> Optimization on by creating functions to process or load data from PySpark data frames into Hive or Impala tables.
 					<br>> Used to pre-process the data from ISA to HDFS file format, apply tranformation technique to create parquet for data cleansing and normalization and create jars upon it.  
 					<br>><b>Designed dashboards and data visualizations using the Dax Commands to communicate meaningful metrics with Power BI.</b> 
