--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
 
 <!-- 								<a href="https://drive.google.com/file/d/1libz5gzqGnuvD45bK8AAmCJnZJIhfPpB/view?usp=sharing" target="_blank">	 -->
 									
-  								<img src="/images/Resume.jpg" alt="Schools" width="100" height="100"><br>
+<!--   								<img src="/images/Resume.jpg" alt="Schools" width="100" height="100"><br> -->
 <!-- 								<input type="button" value="Download!!"> -->
-								</a> 
+<!-- 								</a>  -->
 								
 <!-- 								<button>Download!!</button> -->
-								<p> Click on the Image Doc to View and download the <b>Resume</b>.</p>
+<!-- 								<p> Click on the Image Doc to View and download the <b>Resume</b>.</p> -->
 			
 							</div>
 						</div>
