--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 								
 								<span class="image main"><img src="images/portfolio_pic_1.png" alt="" /></span>
                                 <p>Hey there...<br>
-			         I'm <b>Hari Janardhan Vanka</b>, experienced Business Intelligence Data Analytics Analyst/Engineer/Consultant/Specialist at Regions Bank. As an employee, 
-					Implemented Data Engineering/Analytics Principles by working on Automating ETL process by building/maintianing real-time data processing streaming pipelines on ingesting data from datalake/data sources. 
+			         I'm <b>Hari Janardhan Vanka</b>, experienced Business Intelligence Data Analytics Analyst/Engineer/Consultant/Specialist at PNC Bank. 
+					Implemented Data Engineering/Analytics Principles in Financial domain specifically in Fraud by working on Automating ETL process by building/maintianing real-time data processing streaming pipelines on ingesting data from datalake/data sources. 
 					<br>> Optimization on by creating functions to process or load data from PySpark data frames into Hive or Impala tables.
 					<br>> Used to pre-process the data from ISA to HDFS file format, apply tranformation technique to create parquet for data cleansing and normalization and create jars upon it.  
 					<br>><b>Designed dashboards and data visualizations using the Dax Commands to communicate meaningful metrics with Power BI.</b> 
@@ -74,6 +74,7 @@
 					
 				<br><big><b>Work Experience</b></big>
 <!-- 				<br>SnowStack -&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Data Engineer  &nbsp;&nbsp; from Jan, 2023 -->
+				<br>PNC Bank -&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Data Analytics Analyst &nbsp;&nbsp; from July 2023
 				<br>Regions Bank -&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Data and Analytics Analyst &nbsp;&nbsp; from Oct 2023
 				<br>3S Business Corporation Inc -&nbsp;&nbsp;&nbsp; Data Engineer &nbsp;&nbsp; from Sept 2023	
 				<br>Graduate Student Assistant -&nbsp;&nbsp;&nbsp; from Feb, 2022
